# eos-chronicle

./: .gitmodules  CMakeLists.txt  CREDITS  README.md  TODO  antispam.md  package.cmake
.github/workflows/: build.yml
chronicle-receiver/: chain_state.cpp  chain_state.hpp  chain_state_types.cpp  chain_state_types.hpp  chronicle_msgtypes.h  chronicle_portable_state.hpp  decoder_plugin.cpp  decoder_plugin.hpp  exp_ws_plugin.cpp  exp_ws_plugin.hpp  exp_zmq_plugin.cpp  exp_zmq_plugin.hpp  main.cpp  receiver_plugin.cpp  receiver_plugin.hpp  state_history.hpp  state_history_client.hpp
docs/: 01_design_and_architecture.md
examples/: logging.json
examples/exp-dummy-plugin/: CMakeLists.txt  README.md  exp_dummy_plugin.cpp  exp_dummy_plugin.hpp
pinned_build/: chronicle_pinned_build.sh
src/: chronicle_sth_decoder.cpp
systemd/: chronicle_interactive@.service  chronicle_receiver@.service  chronicle_receiver_ala@.service
testing/: chronicle-ws-dumper.pl  chronicle-ws-interactive.pl  chronicle-zmq-dumper.pl
